--- a/configs/form2_test/2.yaml
+++ b/configs/form2_test/2.yaml
@@ -1,7 +1,7 @@
-structure_name: 'acridine_Form4'
+structure_name: 'acridine_Form2'
 
-runs_directory: 'D:\crystal_datasets\pscp_runs'  # local
-#runs_directory: '/vast/mk8347/pscp_runs'  # cluster
+#runs_directory: 'D:\crystal_datasets\pscp_runs'  # local
+runs_directory: '/vast/mk8347/pscp_runs'  # cluster
 sampling_time: 2.0e+6  # in fs
 restart_sampling_time: 1.0e+7  # in fs
 equilibration_time: 5.0e5
@@ -9,21 +9,21 @@ equilibration_time: 5.0e5
 reference_temperature: 400
 temperature_span: 100
 temperature_delta: 10
-num_restarts: 21  # number of restart runs to actually do
-num_lambda_runs: 1000  # number of restart files saved
-stage_two_num_restarts: 100
-stage_one_sampling_dir: 'ww0.05_wd0.1_long'
+num_restarts: 100  # number of restart runs to actually do
+num_lambda_runs: 100  # number of restart files saved
+stage_two_num_restarts: 21
+stage_one_sampling_dir: 'well_width_0.05_well_depth_0.1'
 
 # what to do
 npt_simulation: False
-nvt_simulation: False
+nvt_simulation: True
 
 stage_one_gen: False
 stage_two_gen: False
 stage_three_gen: False
 
 stage_one_lambda: False
-stage_two_lambda: True
+stage_two_lambda: False
 stage_three_lambda: False
 
 stage_two_re_box: False
