--- a/configs/form4_dev/3.yaml
+++ b/configs/form4_dev/3.yaml
@@ -1,7 +1,7 @@
 structure_name: 'acridine_Form4'
 
-runs_directory: 'D:\crystal_datasets\pscp_runs'  # local
-#runs_directory: '/vast/mk8347/pscp_runs'  # cluster
+#runs_directory: 'D:\crystal_datasets\pscp_runs'  # local
+runs_directory: '/vast/mk8347/pscp_runs'  # cluster
 sampling_time: 2.0e+6  # in fs
 restart_sampling_time: 1.0e+7  # in fs
 equilibration_time: 5.0e+5
@@ -18,7 +18,7 @@ stage_one_sampling_dir: 'well_width_0.05_well_depth_0.1'
 npt_simulation: False
 nvt_simulation: False
 
-stage_one_gen: False
+stage_one_gen: True
 stage_two_gen: False
 stage_three_gen: False
 
@@ -26,7 +26,7 @@ stage_one_lambda: False
 stage_two_lambda: False
 stage_three_lambda: False
 
-stage_two_re_box: True
+stage_two_re_box: False
 
 stage_one_free_energy: False
 stage_two_free_energy: False
