--- a/configs/dev.yaml
+++ b/configs/dev.yaml
@@ -1,5 +1,7 @@
 structure_name: 'acridine_Form4'
 
+show_plots: False
+
 runs_directory: 'D:\crystal_datasets\pscp_runs'  # local
 #runs_directory: '/vast/mk8347/pscp_runs'  # cluster
 sampling_time: 2.0e+6  # in fs
@@ -26,11 +28,11 @@ stage_one_lambda: False
 stage_two_lambda: False
 stage_three_lambda: False
 
-stage_two_re_box: True
+stage_two_re_box: False
 
 stage_one_free_energy: False
 stage_two_free_energy: False
 stage_three_free_energy: False
 
-full_loop_free_energy: False
+full_loop_free_energy: True
 
