--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -35,5 +35,5 @@ stage_one_free_energy: False
 stage_two_free_energy: False
 stage_three_free_energy: False
 
-full_loop_free_energy: True
+full_loop_free_energy: False
 
