--- a/configs/dev.yaml
+++ b/configs/dev.yaml
@@ -14,7 +14,7 @@ temperature_delta: 10
 num_restarts: 100  # number of restart runs to actually do
 num_lambda_runs: 100  # number of restart files saved
 stage_two_num_restarts: 1000
-stage_one_sampling_dir: 'well_width_0.01_well_depth_0.1'
+stage_one_sampling_dir: '0.01_0.1'
 
 # what to do
 npt_simulation: False
@@ -24,14 +24,14 @@ stage_one_gen: False
 stage_two_gen: False
 stage_three_gen: False
 
-stage_one_lambda: True
+stage_one_lambda: False
 stage_two_lambda: False
 stage_three_lambda: False
 
 stage_two_re_box: False
 
 bulk_free_energy: False
-stage_one_free_energy: False
+stage_one_free_energy: True
 stage_two_free_energy: False
 stage_three_free_energy: False
 
